Projeto sem contatos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,12 @@
       <h4>Instalar Aplicativos</h4>
       <p>Na App Store ou Google Play</p>
       <div class="row">
-        <img src="assets/image/app.jpg" alt="App Store">
-        <img src="assets/image/play.jpg" alt="Google Play">
+        <a href="https://apps.apple.com/" target="_blank" rel="noopener noreferrer" aria-label="Abrir na App Store">
+          <img class="store-badge" src="assets/image/app.png" alt="App Store">
+        </a>
+        <a href="https://play.google.com/store" target="_blank" rel="noopener noreferrer" aria-label="Abrir no Google Play">
+          <img class="store-badge" src="assets/image/play.png" alt="Google Play">
+        </a>
       </div>
       <p>Formas de Pagamentos Seguros</p>
       <img src="assets/image/pay.png" alt="Formas de Pagamento">
