--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -38,7 +38,17 @@
             >
           </td>
           <td>{{ produto.nome }}</td>
-          <td>R$ {{ produto.preco.toFixed(2) }}</td>
+          <td>R$ {{ produto.preco.toFixed(2).replace('.', ',') }}</td>
+          <td>
+            <ng-container *ngIf="produto.preco_anterior">
+              <span class="old-price">R$ {{ produto.preco_anterior.toFixed(2).replace('.', ',') }}</span>
+            </ng-container>
+          </td>
+          <td>
+            <ng-container *ngIf="produto.preco_anterior && produto.preco_anterior > produto.preco">
+              {{ ((1 - (produto.preco / produto.preco_anterior)) * 100).toFixed(0) }}% off
+            </ng-container>
+          </td>
           <td>
             <div class="btn-group">
               <a 
