--- a/src/styles.css
+++ b/src/styles.css
@@ -295,16 +295,16 @@ footer .follow i {
 .pro .cart {
   width: 40px;
   height: 40px;
-  line-height: 40px;
   border-radius: 50px;
   background-color: #e8f6ea;
-  font-weight: 500;
   color: #088178;
   border: 1px solid #cce7d0;
   position: absolute;
   bottom: 20px;
   right: 10px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
 }
 
