--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -29,7 +29,9 @@
               </ng-container>
             </div>
           </div>
-          <a href="#" class="cart"><i class="fa-solid fa-cart-shopping"></i></a>
+          <button class="cart" (click)="adicionarAoCarrinho(produto)" aria-label="Adicionar ao carrinho">
+            <i class="fa-solid fa-cart-shopping"></i>
+          </button>
         </div>
       </div>
     </div>
