--- a/src/app/components/shop/shop.component.css
+++ b/src/app/components/shop/shop.component.css
@@ -18,7 +18,7 @@
 
 .discount-badge {
   background-color: #ef3636;
-  color: #FFF;
+  color: #fff !important;
   font-size: 12px;
   padding: 2px 6px;
   border-radius: 4px;
