--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -40,7 +40,7 @@
   <section id="paginacao" class="section-p1">
     <a href="#">1</a>
     <a href="#">2</a>
-    <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
+    <a href="#">...</a>
   </section>
 </div>
 
